--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div id="lateral">
-        <div>
+        <div style="position: relative;">
+            <img src="/08-HTML/img/78775304-cf95-4448-aac7-3cb088137557.jpg" alt="">
+        </div>
+        <div style="position: relative;">
             <h5>Contacto</h5>
             <ul>
                 <li>Email: nacho.17012002@gmail.com</li>
@@ -17,7 +20,7 @@
             </ul>
 
         </div>
-        <div style="margin-top: 150px;">
+        <div style="margin-top: 150px; position: relative;">
             <h5>Idiomas</h5>
             <ul>
                 <li>Ingles: Intermedio</li>
@@ -34,6 +37,10 @@
 
     </div>
     <div id="contenido">
+        <div id="nombre">
+            <h3>Ignacio Agustin, <br> Aranda Galvan</h3>
+
+        </div>
         <div class="contenido" id="exp">
             <h4>Experiencia Laboral</h4>
             <hr>
